# redis-shell

./: .gitignore  README.md  activate.sh  debug_export_state.py  demo_timeseries_export.py  dump.rdb  nodes-30001.conf  nodes-30002.conf  nodes-30003.conf  pyproject.toml  redis-30001.conf  redis-30002.conf  redis-30003.conf  redis-export-20250512-223718-localhost-6379.txt  stdout  test_connection_manager.py  test_emergency_reset.py  test_export_debug.py  test_json_export.py  test_state_singleton.py  test_ts_duplicate_import.py
docs/: README.md  api_reference.md  architecture.md  built_in_extensions.md  configuration.md  examples.md  extension_development.md  getting_started.md  index.md  troubleshooting.md  user_guide.md
redis_shell/: __init__.py  __main__.py  cli.py  cli_improved.py  cli_improved_part2.py  config.py  connection_manager.py  extension_manager.py  plugin_manager.py  state.py  state_manager.py
redis_shell/extensions/: __init__.py  base.py
redis_shell/extensions/cluster/: __init__.py  cluster.py  commands.py  extension.json
redis_shell/extensions/config/: __init__.py  commands.py  extension.json
redis_shell/extensions/connection/: __init__.py  (+2 more)
redis_shell/utils/: __init__.py  command_utils.py  completion_utils.py  file_utils.py  logging_utils.py  performance.py  redis_utils.py
tests/: conftest.py  test_connection_extension.py  test_connection_manager.py  test_data_extension.py  test_export_hanging.py  test_export_simple.py  test_import_with_error.py  test_state_singleton.py  test_stuck_export.py  test_timeseries_export.py  test_utils.py
(+7 files in other folders)
