[project]
name = "redis-shell"
version = "0.1.0"
description = "A Redis CLI shell with enhanced features"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.1.0",
    "redis>=5.0.0",
    "prompt_toolkit>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/mortensi/redis-shell"
Repository = "https://github.com/mortensi/redis-shell.git"

[project.scripts]
redis-shell = "redis_shell.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
testpaths = ["tests"]
